shortcuts added successfully